# naplan-file-renamer

./: .gitignore  pyproject.toml  readme.md  renamer.py  student_list.csv
