[tool.poetry]
name = "naplan_file_renamer"
version = "0.1.0"
description = ""
authors = ["Mark Southon <mrsouthon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
